--- a/.github/workflows/merge-staging.yml
+++ b/.github/workflows/merge-staging.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   cleanup:
-    if: github.event.pull_request.merged == true && github.head_ref == 'dev'
+    if: github.event.pull_request.merged == true && github.head_ref == 'develop'
     name: Clean Deployment History
     runs-on: ubuntu-latest
     environment: staging
@@ -24,7 +24,7 @@ jobs:
           onlyRemoveDeployments: true
 
   deploy-terraform-shared:
-    if: github.event.pull_request.merged == true && github.head_ref == 'dev'
+    if: github.event.pull_request.merged == true && github.head_ref == 'develop'
     name: Deployment
     permissions: write-all
     needs: [cleanup]
@@ -36,7 +36,7 @@ jobs:
     secrets: inherit
 
   deploy-terraform-environment:
-    if: github.event.pull_request.merged == true && github.head_ref == 'dev'
+    if: github.event.pull_request.merged == true && github.head_ref == 'develop'
     name: Deployment
     permissions: write-all
     needs: [deploy-terraform-shared]
@@ -48,7 +48,7 @@ jobs:
     secrets: inherit
 
   deploy-website:
-    if: github.event.pull_request.merged == true && github.head_ref == 'dev'
+    if: github.event.pull_request.merged == true && github.head_ref == 'develop'
     name: Deployment
     needs: [cleanup]
     uses: ./.github/workflows/job-deploy-website.yml
