--- a/waitlist/package.json
+++ b/waitlist/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.308.0",
+    "@vercel/analytics": "^1.1.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -34,7 +35,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-storybook": "^0.6.15",
