--- a/.github/workflows/merge-staging.yml
+++ b/.github/workflows/merge-staging.yml
@@ -24,6 +24,7 @@ jobs:
           onlyRemoveDeployments: true
 
   check-infrastructure-changes:
+    if: github.event.pull_request.merged == true && github.head_ref == 'develop'
     name: Check Infrastructure Changes
     runs-on: ubuntu-latest
     outputs:
@@ -47,10 +48,9 @@ jobs:
         run: echo "::set-output name=infra-changed::${{ steps.changes-infrastructure.outputs.package }}"
 
   deploy-terraform-shared:
-    if: needs.check-infrastructure-changes.outputs.infra-changed == 'true' && github.event.pull_request.merged == true && github.head_ref == 'develop'
     name: Deployment
     permissions: write-all
-    needs: [check-infrastructure-changes, cleanup]
+    needs: [check-infrastructure-changes]
     uses: ./.github/workflows/job-deploy-infrastructure.yml
     with:
       label: Shared Infrastructure
