chore(ci): replace set-output to remove warning

--- a/.github/workflows/pull-request-production.yml
+++ b/.github/workflows/pull-request-production.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Set output
         id: check
-        run: echo "::set-output name=infra-changed::${{ steps.changes-infrastructure.outputs.package }}"
+        run: echo "infra-changed=${{ steps.changes-infrastructure.outputs.package }}" >> $GITHUB_ENV
 
   plan-infrastructure-shared:
     name: Plan
