--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,16 @@
 **/node_modules
 **/dist
 
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
 # vite
 **/.vite
+
+# nextjs
+**/.next/
+/out/
 
 # serverless
 **/.serverless
@@ -18,23 +26,11 @@
 **/terraform.tfvars
 
 # Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
+*.log*
 
 # Editor directories and files
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
@@ -44,4 +40,22 @@ dist-ssr
 # macos
 **/.DS_Store
 
-**/.env
+# dependencies
+**/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+*.pem
+
+# local env files
+**/.env*
+
+# vercel
+.vercel
