--- a/.github/workflows/merge-staging.yml
+++ b/.github/workflows/merge-staging.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Set output
         id: check
-        run: echo "infra-changed=${{ steps.changes-infrastructure.outputs.package }}" >> $GITHUB_ENV
+        run: echo "infra-changed=${{ steps.changes-infrastructure.outputs.package }}" >> $GITHUB_OUTPUT
 
   deploy-terraform-shared:
     if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'develop') && needs.check-infrastructure-changes.outputs.infra-changed == 'true'
