--- a/lambdas/question/serverless.yml
+++ b/lambdas/question/serverless.yml
@@ -42,15 +42,15 @@ functions:
       - sqs: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_arn}
     timeout: 300
 
-  generation-publisher:
-    name: ${self:provider.stage}-question-generation-publisher
+  audio-receiver:
+    name: ${self:provider.stage}-question-audio-receiver
     image:
       name: default
       command:
-        - publish_generation.handler
+        - audio_receiver.handler
     events:
       - http:
-          path: /questions/generate
+          path: /questions/evaluate
           method: POST
           cors:
             origins:
@@ -64,7 +64,7 @@ functions:
             type: request
             identitySource: method.request.header.Cookie
             resultTtlInSeconds: 300
-            name: ${self:provider.stage}-question-generation-publisher-authorizer
+            name: ${self:provider.stage}-question-audio-receiver-authorizer
             arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
     timeout: 30
 
