--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@sentry/react": "^7.93.0",
+    "@sentry/vite-plugin": "^2.10.2",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
