--- a/lambdas/question/serverless.yml
+++ b/lambdas/question/serverless.yml
@@ -68,5 +68,18 @@ functions:
             arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
     timeout: 30
 
+  evaluate:
+    name: ${self:provider.stage}-question-evaluate
+    image:
+      name: default
+      command:
+        - evaluate.handler
+    events:
+      - s3:
+          bucket: ${self:provider.stage}-data-candidate-response
+          event: s3:ObjectCreated:*
+          existing: true
+    timeout: 30
+
 plugins:
   - serverless-deployment-bucket
