--- a/.github/workflows/dispatch-deploy-website.yml
+++ b/.github/workflows/dispatch-deploy-website.yml
@@ -3,8 +3,12 @@ name: Manually Deploy Website
 on:
   workflow_dispatch:
     inputs:
-      environment:
-        description: "Environment to deploy to"
+      environment-label:
+        description: "Label for the environment you are deploying to. Capitalized."
+        required: true
+        default: "Staging"
+      node-environment:
+        description: "Node environment to deploy to. Lowercase."
         required: true
         default: "staging"
 
@@ -13,4 +17,5 @@ jobs:
     name: Deploy to S3
     uses: ./.github/workflows/job-deploy-website.yml
     with:
-      environment: ${{ inputs.environment }}
+      environment-label: ${{ inputs.environment-label }}
+      node-environment: ${{ inputs.node-environment }}
