--- a/.github/workflows/merge-production.yml
+++ b/.github/workflows/merge-production.yml
@@ -61,5 +61,6 @@ jobs:
     needs: [cleanup]
     uses: ./.github/workflows/job-deploy-website.yml
     with:
-      environment: Production
+      environment-label: Production
+      node-environment: production
     secrets: inherit
