--- a/.github/workflows/merge-staging.yml
+++ b/.github/workflows/merge-staging.yml
@@ -73,7 +73,8 @@ jobs:
     needs: [cleanup]
     uses: ./.github/workflows/job-deploy-website.yml
     with:
-      environment: Staging
+      environment-label: Staging
+      node-environment: staging
     secrets: inherit
 
   # create-release-web:
