fix(ci): ci crashing

--- a/.github/workflows/job-create-release.yml
+++ b/.github/workflows/job-create-release.yml
@@ -7,12 +7,15 @@ on:
       environment:
         required: true
         type: string
+      environment-label:
+        required: true
+        type: string
 
 jobs:
   run:
     name: ${{ inputs.component }}
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment }}
+    environment: ${{ inputs.environment-label }}
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v3
