--- a/.github/workflows/dispatch-deploy-infrastructure.yml
+++ b/.github/workflows/dispatch-deploy-infrastructure.yml
@@ -4,7 +4,11 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: "Environment to deploy to"
+        description: "Environment to deploy to in lowercase."
+        required: true
+        default: "staging"
+      environment-label:
+        description: "Environment to deploy to in capitalized."
         required: true
         default: "staging"
 
@@ -14,6 +18,7 @@ jobs:
     uses: ./.github/workflows/job-plan-infrastructure.yml
     with:
       environment: ${{ inputs.environment }}
+      environment-label: ${{ inputs.environment-label }}
       component: shared
       label: Shared Infrastructure
     secrets: inherit
@@ -25,6 +30,7 @@ jobs:
     needs: [plan-shared]
     with:
       environment: ${{ inputs.environment }}
+      environment-label: ${{ inputs.environment-label }}
       component: environment
       label: Environment Infrastructure
     secrets: inherit
@@ -35,6 +41,7 @@ jobs:
     needs: [plan-shared]
     with:
       environment: ${{ inputs.environment }}
+      environment-label: ${{ inputs.environment-label }}
       component: shared
       label: Shared Infrastructure
     secrets: inherit
@@ -46,6 +53,7 @@ jobs:
     needs: [plan-environment]
     with:
       environment: ${{ inputs.environment }}
+      environment-label: ${{ inputs.environment-label }}
       component: environment
       label: Environment Infrastructure
     secrets: inherit
