--- a/.github/workflows/job-plan-infrastructure.yml
+++ b/.github/workflows/job-plan-infrastructure.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Set Terraform Variables (Environment)
         if: inputs.component == 'environment'
         run: |
-          echo 'namespace = "${{ secrets.TF_NAMESPACE}}"' >> terraform.tfvars
+          echo 'namespace = "${{ secrets.TF_NAMESPACE}}"' > terraform.tfvars
           echo 'db_username = "${{ secrets.TF_DB_USERNAME }}"' >> terraform.tfvars
           echo 'db_password = "${{ secrets.TF_DB_PASSWORD}}"' >> terraform.tfvars
           echo 'client_origin = "${{ vars.TF_CLIENT_ORIGIN }}"' >> terraform.tfvars
@@ -68,10 +68,8 @@ jobs:
       - name: Set Terraform Variables (Shared)
         if: inputs.component == 'shared'
         run: |
-          echo 'domain_name = {' > terraform.tfvars
-          echo '  "prod": "${{ vars.TF_PRODUCTION_DOMAIN_NAME }}",' >> terraform.tfvars
-          echo '  "staging": "${{ vars.TF_STAGING_DOMAIN_NAME }}"' >> terraform.tfvars
-          echo '}' >> terraform.tfvars
+          echo 'hosted_zone = "${{ vars.TF_HOSTED_ZONE }}"' > terraform.tfvars
+          echo 'app_domain_name = "${{ vars.TF_APP_DOMAIN_NAME }}"' >> terraform.tfvars
         working-directory: terraform/${{ inputs.component }}
 
       - name: Terraform Plan
