fix(ci): dispatch-deploy-website.yml not passing down secrets

--- a/.github/workflows/dispatch-deploy-website.yml
+++ b/.github/workflows/dispatch-deploy-website.yml
@@ -19,3 +19,4 @@ jobs:
     with:
       environment: ${{ inputs.environment }}
       environment-label: ${{ inputs.environment-label }}
+    secrets: inherit
