--- a/.github/workflows/job-deploy-website.yml
+++ b/.github/workflows/job-deploy-website.yml
@@ -43,9 +43,8 @@ jobs:
         working-directory: web
 
       - name: Build
-        run: npm run build
+        run: npm run build --mode ${{ inputs.environment }}
         env:
-          NODE_ENV: ${{ inputs.environment }}
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
           SENTRY_ENVIRONMENT: ${{ inputs.environment-label }}
