--- a/.github/workflows/job-plan-infrastructure.yml
+++ b/.github/workflows/job-plan-infrastructure.yml
@@ -68,9 +68,20 @@ jobs:
       - name: Set Terraform Variables (Shared)
         if: inputs.component == 'shared'
         run: |
+          IFS=',' read -ra records <<< "${{ vars.GOOGLE_WORKSPACE_RECORDS }}"
           echo 'hosted_zone = "${{ vars.TF_HOSTED_ZONE }}"' > terraform.tfvars
           echo 'app_domain_name = "${{ vars.APP_DOMAIN_NAME }}"' >> terraform.tfvars
+          echo 'google_workspace_record_name = "${{ vars.GOOGLE_WORKSPACE_RECORD_NAME }}"' >> terraform.tfvars
+          echo 'google_workspace_records = { "mx" = [' >> terraform.tfvars
+          for record in "${records[@]}"; do
+            echo "\"$record\"," >> terraform.tfvars
+          done
+          echo '] }' >> terraform.tfvars
         working-directory: terraform/${{ inputs.component }}
+
+      - name: Check file
+        run: |
+          cat terraform.tfvars
 
       - name: Terraform Plan
         id: plan
